--- a/src/info.css
+++ b/src/info.css
@@ -1,8 +1,8 @@
 .me {
   padding-top: 1px;
   padding-bottom: 40px;
-  font-size: xx-large;
-  color: lavender;
+  font-size: 50px;
+  color: black;
   font-weight: normal;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   line-height: 0px;
